modified:   14. Defining Classes/Generics.ipynb

--- a/14. Defining Classes/Generics.ipynb
+++ b/14. Defining Classes/Generics.ipynb
@@ -68,7 +68,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -109,7 +109,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -211,7 +211,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -246,7 +246,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -274,16 +274,19 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [
     {
-     "ename": "Unhandled Exception",
-     "evalue": "(3,25): error CS0173: Type of conditional expression cannot be determined because there is no implicit conversion between 'Dog' and 'string'",
-     "output_type": "error",
-     "traceback": [
-      "(3,25): error CS0173: Type of conditional expression cannot be determined because there is no implicit conversion between 'Dog' and 'string'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WOOF!\n",
+      "WOOF!\n",
+      "WOOF!\n",
+      "WOOF!\n",
+      "<null>\n"
      ]
     }
    ],
@@ -320,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -329,7 +332,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -371,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -380,10 +383,22 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WOOF!\n",
+      "WOOF!\n",
+      "WOOF!\n",
+      "<null>\n",
+      "<null>\n"
+     ]
+    }
+   ],
    "source": [
     "foreach( Dog kennel in dogShelter.kennels )\n",
     "{\n",
@@ -393,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -402,10 +417,51 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<details open=\"open\" class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>WOOF!</code></span></summary><div><table><thead><tr></tr></thead><tbody></tbody></table></div></details><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "releasedAnimal"
    ]
@@ -428,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -437,7 +493,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -473,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -482,10 +538,19 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(3,21): error CS1503: Argument 1: cannot convert from 'Cat' to 'Dog'",
+     "output_type": "error",
+     "traceback": [
+      "(3,21): error CS1503: Argument 1: cannot convert from 'Cat' to 'Dog'"
+     ]
+    }
+   ],
    "source": [
     "AnimalShelter catShelter = new AnimalShelter(5);\n",
     "\n",
@@ -788,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -797,7 +862,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -829,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -838,10 +903,18 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After the Swap, five = 10 and ten = 5\r\n"
+     ]
+    }
+   ],
    "source": [
     "public int five = 5,\n",
     "           ten  = 10;\n",
@@ -855,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -864,10 +937,18 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After the Swap, 1st_Word = Second Word and 2nd_Word = First Word\r\n"
+     ]
+    }
+   ],
    "source": [
     "public string firstWord  = \"First Word\",\n",
     "              secondWord = \"Second Word\"; \n",
@@ -899,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -908,10 +989,18 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After the Swap, five = 5 and ten = 10\r\n"
+     ]
+    }
+   ],
    "source": [
     "Swap( ref five, ref ten );\n",
     "\n",
@@ -920,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -929,10 +1018,18 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After the Swap, 1st_Word = First Word and 2nd_Word = Second Word\r\n"
+     ]
+    }
+   ],
    "source": [
     "Swap( ref firstWord, ref secondWord );\n",
     "\n",
@@ -975,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -984,7 +1081,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1085,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1094,7 +1191,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1120,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1129,7 +1226,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1140,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1149,10 +1246,22 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MEOW!\n",
+      "MEOW!\n",
+      "MEOW!\n",
+      "MEOW!\n",
+      "<null>\n"
+     ]
+    }
+   ],
    "source": [
     "foreach( Cat kennel in catShelter.kennels )\n",
     "{\n",
@@ -1178,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1187,7 +1296,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1197,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1206,10 +1315,22 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MEOW!\n",
+      "MEOW!\n",
+      "MEOW!\n",
+      "<null>\n",
+      "<null>\n"
+     ]
+    }
+   ],
    "source": [
     "foreach( Cat kennel in catShelter.kennels )\n",
     "{\n",
