modified:   16. Linear Data Structures/Custom Implementations/Dynamic (Linked) Lists.ipynb modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb modified:   17. Trees and Graphs/Custom Implementations/Trees/Dynamic Trees.ipynb

--- a/16. Linear Data Structures/Custom Implementations/Dynamic (Linked) Lists.ipynb
+++ b/16. Linear Data Structures/Custom Implementations/Dynamic (Linked) Lists.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -89,7 +89,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -811,7 +811,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -830,21 +830,10 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th>NodeCount</th></tr></thead><tbody><tr><td>0</td></tr></tbody></table>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "linkedIntegerList"
    ]
@@ -867,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -876,7 +865,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -889,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -898,28 +887,17 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th>NodeCount</th></tr></thead><tbody><tr><td>7</td></tr></tbody></table>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "linkedIntegerList"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -928,18 +906,10 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 -> 2 -> 3 -> 4 -> 5 -> 6 -> 7"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "linkedIntegerList.PrintList();"
    ]
@@ -962,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -971,7 +941,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -981,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -990,28 +960,17 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th>NodeCount</th></tr></thead><tbody><tr><td>8</td></tr></tbody></table>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "linkedIntegerList"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1020,18 +979,10 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 -> 2 -> 3 -> 99 -> 4 -> 5 -> 6 -> 7"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "linkedIntegerList.PrintList();"
    ]
@@ -1054,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1063,7 +1014,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1073,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1082,28 +1033,17 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th>NodeCount</th></tr></thead><tbody><tr><td>9</td></tr></tbody></table>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "linkedIntegerList"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1112,18 +1052,10 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "99 -> 1 -> 2 -> 3 -> 99 -> 4 -> 5 -> 6 -> 7"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "linkedIntegerList.PrintList();"
    ]
@@ -1146,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1155,7 +1087,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1165,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1174,28 +1106,17 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th>NodeCount</th></tr></thead><tbody><tr><td>10</td></tr></tbody></table>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "linkedIntegerList"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1204,18 +1125,10 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "99 -> 1 -> 2 -> 3 -> 99 -> 4 -> 5 -> 6 -> 7 -> 99"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "linkedIntegerList.PrintList();"
    ]
@@ -1240,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1249,28 +1162,17 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "linkedIntegerList.Remove( 99 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1279,28 +1181,17 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th>NodeCount</th></tr></thead><tbody><tr><td>9</td></tr></tbody></table>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "linkedIntegerList"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1309,18 +1200,10 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 -> 2 -> 3 -> 99 -> 4 -> 5 -> 6 -> 7 -> 99"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "linkedIntegerList.PrintList();"
    ]
@@ -1345,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1354,28 +1237,17 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "99"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "linkedIntegerList.RemoveAt( linkedIntegerList.NodeCount - 1 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1384,28 +1256,17 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th>NodeCount</th></tr></thead><tbody><tr><td>8</td></tr></tbody></table>"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "linkedIntegerList"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1414,18 +1275,10 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 -> 2 -> 3 -> 99 -> 4 -> 5 -> 6 -> 7"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "linkedIntegerList.PrintList();"
    ]
@@ -1448,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1457,21 +1310,10 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "// Is there any more occurrences of the value 99 in the list?\n",
     "linkedIntegerList.Contains( 99 )"
@@ -1479,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1488,21 +1330,10 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "// At which index of the list does the value 99 occur?\n",
     "linkedIntegerList.IndexOf( 99 )"
@@ -1526,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1535,7 +1366,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1545,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1554,21 +1385,10 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th>NodeCount</th></tr></thead><tbody><tr><td>0</td></tr></tbody></table>"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "linkedIntegerList"
    ]
