--- a/17. Trees and Graphs/Custom Implementations/Trees/Dynamic Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Dynamic Trees.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -353,7 +353,7 @@
    "source": [
     "Consider the example tree below:\n",
     "   \n",
-    "<img src=\"../_img/TreeTerminology.png\" style=\"display: block; margin: auto; width: 650px;\"></img>"
+    "<img src=\"../../_img/TreeTerminology.png\" style=\"display: block; margin: auto; width: 650px;\"></img>"
    ]
   },
   {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -410,7 +410,23 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "   19\n",
+      "      1\n",
+      "      12\n",
+      "      31\n",
+      "   21\n",
+      "   14\n",
+      "      23\n",
+      "      6\n"
+     ]
+    }
+   ],
    "source": [
     "tree.TraverseDFS()"
    ]
