modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb renamed:    17. Trees and Graphs/Custom Implementations/Trees/Dynamic Trees.ipynb -> 17. Trees and Graphs/Custom Implementations/Trees/General Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb
@@ -18,9 +18,38 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A **Binary Tree** has nodes which all have a **degree equal or less than 2**. Because every node’s children are at most **2**, we call them **left child** and **right child**.They are the roots of the **left sub-tree** and the **right sub-tree** of their parent node.\n",
+    "   \n",
+    "Some nodes may have only left or only right child, but not both. Some nodes may have *no children* and are called **leaves**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Binary Trees v.s. General Trees"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is one very big difference between the definition of binary tree from the definition of the classical tree – the order of the children of each node. The next example will illustrate that difference:"
+   ]
   }
  ],
  "metadata": {
