--- a/17. Trees and Graphs/Custom Implementations/Trees/General Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/General Trees.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "## Custom Implementations\n",
-    "### Trees (Dynamic Implementation)\n",
+    "### General Trees (Dynamic Implementation)\n",
     "---"
    ]
   },
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This **Dynamic Tree** definition shall be a **recursively branching structure**, consisting of numbered **Tree Nodes**, each of which contains a `List<T>` of **zero or more children**, which are themselves **Tree Nodes** as well.   \n",
+    "This **General Tree** definition shall be a **recursively branching structure**, consisting of numbered **Tree Nodes**, each of which contains a `List<T>` of **zero or more children**, which are themselves **Tree Nodes** as well.   \n",
     "   \n",
     "The **Tree itself is a seperate class**, which can be empty or can have a root node, that implements basic operations over trees like *construction* and *traversal*."
    ]
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Dynamic Tree"
+    "### The Dynamic General Tree"
    ]
   },
   {
