--- a/17. Trees and Graphs/Custom Implementations/Trees/General Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/General Trees.ipynb
@@ -65,16 +65,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this **Dynamic implementation of the Tree**, we will need to define a pair of classses following the pattern below: \n",
+    "For this **Dynamic implementation of the General Tree**, we will need to define a pair of classses following the pattern below: \n",
     "1. A `TreeNode<T>` class $-$ will store a single Node of the Tree along with a `List<T>` of it's Children Nodes."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br>"
    ]
   },
   {
