modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is one very big difference between the definition of binary tree from the definition of the classical tree – the order of the children of each node. The next example will illustrate that difference:"
+    "There is one very big difference between the definition of Binary Tree from the definition of the <a href=\"./General Trees.ipynb\">General Tree</a> - *the order of the children of each node*. The next example will illustrate that difference:"
    ]
   }
  ],
