modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb new file:   17. Trees and Graphs/_img/OneSingleChildGenericTree.jpg new file:   17. Trees and Graphs/_img/TwoOneChildBinaryTrees.jpg

--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb
@@ -48,7 +48,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is one very big difference between the definition of Binary Tree from the definition of the <a href=\"./General Trees.ipynb\">General Tree</a> - *the order of the children of each node*. The next example will illustrate that difference:"
+    "There is one very big difference between the definition of Binary Tree from the definition of the <a href=\"./General Trees.ipynb\">General Tree</a> - *the order of the children for each node*."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below, we see an image of **2 distinct Binary Trees**: \n",
+    "\n",
+    "- the tree on the left has a **root**, `19`, and a single **left child**, `23`.\n",
+    "- the tree on the right has a **root**, `19`, and a single **right child**, `23`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"../../_img/TwoOneChildBinaryTrees.jpg\" style=\"display: block; margin: auto; width: 400px;\"></img>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$Conversely$,"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A General Tree implementation of the same nodes *would not result in 2 distinctive trees*, but rather would be illustrated as follows:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"../../_img/OneSingleChildGenericTree.jpg\" style=\"display: block; margin: auto; width: 400px;\"></img>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$Consequently$,"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Although we take **Binary Trees** as a special case of a General Tree structure, it's important to remember that the particular order of their children nodes results in them being very different structures."
    ]
   }
  ],
