modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb new file:   17. Trees and Graphs/_img/BinaryTreeExample.jpg

--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb
@@ -32,6 +32,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Below, we have an example of a **Binary Tree** in which we can see: \n",
+    "- A **root** node of `14`\n",
+    "- A **left sub-tree** \n",
+    "- A **right child**, `15`, which has:\n",
+    "  - A subsequent **left-child** of `8` \n",
+    "  - A subsequent **right child** of `10`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"../../_img/BinaryTreeExample.jpg\" style=\"display: block; margin: auto; width: 700px;\"></img>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<br>"
    ]
   },
@@ -109,6 +130,27 @@
    "source": [
     "Although we take **Binary Trees** as a special case of a General Tree structure, it's important to remember that the particular order of their children nodes results in them being very different structures."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
