modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb
@@ -22,6 +22,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Overview"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "A **Binary Tree** has nodes which all have a **degree equal or less than 2**. Because every node’s children are at most **2**, we call them **left child** and **right child**.They are the roots of the **left sub-tree** and the **right sub-tree** of their parent node.\n",
     "   \n",
     "Some nodes may have only left or only right child, but not both. Some nodes may have *no children* and are called **leaves**."
@@ -33,8 +41,8 @@
    "metadata": {},
    "source": [
     "Below, we have an example of a **Binary Tree** in which we can see: \n",
-    "- A **root** node of `14`\n",
-    "- A **left sub-tree** \n",
+    "- A **root** node of `17`\n",
+    "- A **left sub-tree**, consisting of nodes `9`, `6`, and `5` \n",
     "- A **right child**, `15`, which has:\n",
     "  - A subsequent **left-child** of `8` \n",
     "  - A subsequent **right child** of `10`"
@@ -61,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Binary Trees v.s. General Trees"
+    "#### Binary Trees v.s. General Trees"
    ]
   },
   {
@@ -144,13 +152,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>"
+    "#### Binary Tree Traversals"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In <a href=\"../../DFS and BFS Traversal.ipynb\">DFS and BFS Traversal</a>, we determined that **Depth First Search** recursively utilizes the call-stack to traverse each node of a structure in such a way that each search step is *deepened* as much as possible before going to the next child node.  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$Consequently,$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To traverse **Binary Trees** with **DFS**, we may perform the following operations at each node:   \n",
+    "\n",
+    "1. If the current node is *empty* then *return*.\n",
+    "2. Execute the following *three operations* in a certain order:\n",
+    "   - $N$: Visit the *current node*.   \n",
+    "   - $L$: Recursively traverse the current node's *left subtree*.   \n",
+    "   - $R$: Recursively traverse the current node's *right subtree*."
+   ]
   }
  ],
  "metadata": {
